# Terrain-Surveying-Drone

./: README.md
a3_skeleton_final/a3_skeleton/: .gitignore  .rosdoc2.yaml  CMakeLists.txt  Doxyfile  index.dox  package.xml
a3_skeleton_final/a3_skeleton/data/position1/: metadata.yaml  position1_0.db3
a3_skeleton_final/a3_skeleton/data/ros2/: metadata.yaml  ros2.db3
a3_skeleton_final/a3_skeleton/doc/html/: annotated.html  annotated_dup.js  class_controller-members.html  class_controller.html  class_controller.js  class_controller__coll__graph.map  class_controller_a68cafe80a04b33fb2a6abd3ada2c6e47_icgraph.map  class_controller_a68cafe80a04b33fb2a6abd3ada2c6e47_icgraph.md5  class_controller_a6ba57da8b9aef7e4e894e903414e6383_cgraph.map  class_controller_a6ba57da8b9aef7e4e894e903414e6383_cgraph.md5  class_controller_a7db93fa14ecab45aff1cd799ac922411_icgraph.map  class_controller_a7db93fa14ecab45aff1cd799ac922411_icgraph.md5  class_controller_a98a5028b8184631ddd6aab9b2dea12ca_icgraph.map  class_controller_a98a5028b8184631ddd6aab9b2dea12ca_icgraph.md5  class_controller_ac12e40ab614fa55783149718a22ce68e_cgraph.map  class_controller_ac12e40ab614fa55783149718a22ce68e_cgraph.md5  class_controller_ad88269eeca9c75ba490895d693a08260_icgraph.map  class_controller_ad88269eeca9c75ba490895d693a08260_icgraph.md5  class_drone_node-members.html  class_drone_node.html  class_drone_node.js  class_drone_node__inherit__graph.map  class_drone_node__inherit__graph.md5  class_drone_unit_test-members.html  class_drone_unit_test.html  class_drone_unit_test.js  class_drone_unit_test__coll__graph.map  class_drone_unit_test__coll__graph.md5  class_graph-members.html  class_graph.html  class_graph.js  class_graph__coll__graph.map  class_graph__coll__graph.md5  class_graph_a2800611842a98a847b34f4be262a35b3_cgraph.map  class_graph_a2800611842a98a847b34f4be262a35b3_cgraph.md5  class_graph_a2800611842a98a847b34f4be262a35b3_icgraph.map  class_graph_a2800611842a98a847b34f4be262a35b3_icgraph.md5  class_graph_a591d7188ab17c21c05b7ef4cac9de791_cgraph.map  class_graph_a591d7188ab17c21c05b7ef4cac9de791_cgraph.md5  class_graph_adab0504921ee6b0ec844425cdd0278f5_icgraph.map  (+228 more)
a3_skeleton_final/a3_skeleton/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_4.js  files_5.js  (+54 more)
a3_skeleton_final/a3_skeleton/doc/latex/: annotated.tex  class_controller.tex  class_controller__coll__graph.md5  class_controller_a68cafe80a04b33fb2a6abd3ada2c6e47_icgraph.md5  class_controller_a6ba57da8b9aef7e4e894e903414e6383_cgraph.md5  class_controller_a7db93fa14ecab45aff1cd799ac922411_icgraph.md5  class_controller_a98a5028b8184631ddd6aab9b2dea12ca_icgraph.md5  class_controller_ac12e40ab614fa55783149718a22ce68e_cgraph.md5  class_controller_ad88269eeca9c75ba490895d693a08260_icgraph.md5  class_drone_node.tex  class_drone_node__coll__graph.md5  class_drone_unit_test.tex  class_drone_unit_test__coll__graph.md5  class_graph.tex  class_graph_a2800611842a98a847b34f4be262a35b3_cgraph.md5  class_graph_a2800611842a98a847b34f4be262a35b3_icgraph.md5  class_graph_a591d7188ab17c21c05b7ef4cac9de791_cgraph.md5  class_graph_adab0504921ee6b0ec844425cdd0278f5_icgraph.md5  class_laser_processing.tex  class_laser_processing__coll__graph.md5  class_sensor_node.tex  class_sensor_node__coll__graph.md5  class_t_s_p_solver.tex  class_terrain_map.tex  class_terrain_map_a56e0970514cfebea150832afff613ad5_cgraph.md5  class_terrain_map_abcccf16b8f9eebdb6b10b203f93a48e0_icgraph.md5  class_waypoint_manager.tex  common_8cpp.tex  common_8cpp__incl.md5  common_8cpp_source.tex  common_8h.tex  common_8h__dep__incl.md5  common_8h__incl.md5  common_8h_source.tex  controller_8cpp.tex  controller_8cpp__incl.md5  controller_8cpp_source.tex  controller_8h.tex  controller_8h__dep__incl.md5  controller_8h__incl.md5  (+76 more)
a3_skeleton_final/a3_skeleton/include/: drone_node.h  sensor_node.h  tsp_solver.h  waypoint_manager.h
a3_skeleton_final/a3_skeleton/launch/: drone.launch.py
a3_skeleton_final/a3_skeleton/scripts/: collect_test_data.sh  custom_rosbag_recorder.py  drone_node.sh  test_mission.sh
a3_skeleton_final/a3_skeleton/src/: controller.cpp  drone_node.cpp  graph.cpp  sensor_node.cpp  tsp_solver.cpp  waypoint_manager.cpp
a3_skeleton_final/a3_skeleton/test/: drone_survey_tests.cpp
